# jupyterlab-trame-manager

./: .copier-answers.yml  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  install.json  package.json  pyproject.toml
.github/workflows/: build.yml  check-release.yml  release.yml
jupyter-config/nb-config/: jupyter_viz_extension.json
jupyter-config/server-config/: jupyter_viz_extension.json  jupyterlab-trame-manager.json
jupyter_viz_extension/: __init__.py  cmd.py  handlers.py  model.py  proxy.py  trame_model.py  types.py
jupyter_viz_extension/configurations/: __init__.py  desktop.py
jupyter_viz_extension/configurations/jsc/: __init__.py  paraview_juwelsbooster.in
jupyter_viz_extension/handlers/: __init__.py  cmd.py  paraview.py  trame.py  user.py
jupyter_viz_extension/share/: launch_paraview.in
jupyterlab_trame_manager/: __init__.py  cmd.py  configuration.py  model.py  proxy.py  types.py
jupyterlab_trame_manager/configurations/: __init__.py  desktop.py
jupyterlab_trame_manager/configurations/jsc/: __init__.py  paraview-template.jinja2  paraview_juwelsbooster.in
jupyterlab_trame_manager/handlers/: __init__.py  paraview.py  trame.py  user.py
jupyterlab_trame_manager/mixins/: slurm.py
schema/: plugin.json
src/: components.tsx  dialogs.tsx  handler.ts  icons.ts  index.tsx  paraview.tsx  trame.tsx
style/: base.css  collapsible.css  components.css  index.css
